Components state now stored in browser with jStorage.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ComponentStateManager/ComponentStateManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ComponentStateManager/ComponentStateManagerTest.html
@@ -39,6 +39,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
 
    <script type="text/javascript" src="../../ObjectTests/ComponentStateManager/ComponentStateManagerTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/ComponentStateManager/DefaultStateTransformerTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/ComponentStateManager/FixedComponentOrderedTransformerTest.js"></script>
    
    <script type="text/javascript">
