--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/StringTokenizerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/StringTokenizerTest.html
@@ -31,6 +31,9 @@
       runTestFunction();
    });
 
+   JsHamcrest.Integration.JsUnit();
+   JsMockito.Integration.JsUnit();
+   
    var TEXT_WITH_WHITESPACES = "this is a test";
    var tokenizer = null;
    
