--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIController/WebUIControllerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIController/WebUIControllerTest.html
@@ -25,6 +25,7 @@
    <script type="text/javascript" src="../../JsUnit/app/JsTestClass.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
+   <script type="text/javascript" src="../../Libraries/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Libraries/MochaUI/Core.js"></script>
    <script type="text/javascript" src="../../Libraries/MochaUI/Dock.js"></script>
    <script type="text/javascript" src="../../Libraries/MochaUI/Layout.js"></script>
