--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -12,7 +12,7 @@
     
    <script type="text/javascript" src="JavaScript/Libraries/JsHamcrest/jshamcrest.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/Log4JavaScript/log4javascript.js"></script>
-   <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-core-1.4.5-full-compat.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
        
    <script type="text/javascript" src="JavaScript/Libraries/Draw2d/draw2d.js"></script>
@@ -24,6 +24,7 @@
    <script type="text/javascript" src="JavaScript/Libraries/Draw2d/InheritanceConnection.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/Draw2d/InheritanceConnectionDecorator.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/Draw2d/InheritancePort.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Core.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Dock.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Layout.js"></script>
