ComponentStateManager.reset() flushes values stored in browser.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
@@ -78,6 +78,7 @@
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
+   <script type="text/javascript" src="../../Source/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Source/NewsReaderWidget/NewsReaderWidget.js"></script>
    <script type="text/javascript" src="../../Source/NewsReaderWidget/RssChannel.js"></script>
    <script type="text/javascript" src="../../Source/NewsReaderWidget/RssItem.js"></script>
