--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
@@ -66,6 +66,7 @@
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
+   <script type="text/javascript" src="../../Source/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUIController/WebUIController.js"></script> 
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script> 
