--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDocumentElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDocumentElementTest.html
@@ -70,6 +70,7 @@
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
+   <script type="text/javascript" src="../../Source/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentResource.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentImage.js"></script>
