--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TabWidget/TabWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TabWidget/TabWidgetTest.html
@@ -61,6 +61,7 @@
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
+   <script type="text/javascript" src="../../Source/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="../../Source/TabWidget/DuplicatedTabException.js"></script>
    <script type="text/javascript" src="../../Source/TabWidget/Tab.js"></script>
