--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
@@ -61,6 +61,7 @@
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
+   <script type="text/javascript" src="../../Source/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Source/TreeWidget/TreeNode.js"></script>
    <script type="text/javascript" src="../../Source/TreeWidget/TreeNodeFactory.js"></script>
    <script type="text/javascript" src="../../Source/TreeWidget/TreeNodeType.js"></script>
