--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopDocumentTest.html
@@ -82,6 +82,7 @@
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
+   <script type="text/javascript" src="../../Source/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Source/LanguageSelectorWidget/LanguageChangedMessage.js"></script>
    <script type="text/javascript" src="../../Source/LanguageSelectorWidget/LanguageSelectorWidget.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentResource.js"></script>
