--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/DiagramWidget/DiagramWidgetTest.html
@@ -77,6 +77,7 @@
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
+   <script type="text/javascript" src="../../Source/jStorage/jstorage.js"></script>
    <script type="text/javascript" src="../../Source/ToolBarWidget/ToolBarButton.js"></script>
    <script type="text/javascript" src="../../Source/ToolBarWidget/ToolBarWidget.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
