New build of ProcessPuzzleUI. WebUIController instantiates ComponentStateManager with application specific name.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html
@@ -83,10 +83,16 @@
       assertNotNull( "Selects and strores 'internationalization' element.", webUIConfiguration.getI18Element() );
    }
       
-//Internationalization, Locale
-	  function testGetI18DefaultLocale() {
-	  	assertEquals( "hu", webUIConfiguration.getI18DefaultLocale() );
-	  }
+   //Application properties
+   function testGetApplicationName() {
+      assertThat( webUIConfiguration.getApplicationName(), equalTo( "ProcessPuzzle" ));
+      assertThat( webUIConfiguration.getApplicationVersion(), equalTo( "1.0" ));
+   }
+ 
+   //Internationalization, Locale
+   function testGetI18DefaultLocale() {
+      assertEquals( "hu", webUIConfiguration.getI18DefaultLocale() );
+   }
 	  
       function testGetI18Locale() {
       	assertEquals( LOCALE_ONE, webUIConfiguration.getI18Locale( 0 ) );
