--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
@@ -60,6 +60,7 @@
    <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/LeafMenuItem.js"></script>
    <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
    <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/RootMenu.js"></script>
+   <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/WidgetConfigurationException.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/LocaleUtil.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/ResourceKey.js"></script>
