--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentFooterTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentFooterTest.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-   <title>Test page for DocumentHeader.js</title>
+   <title>Test page for DocumentFooter.js</title>
    <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=8"/>
    <meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
@@ -58,12 +58,12 @@
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/CompositeDocumentElement.js"></script>
-   <script type="text/javascript" src="../../Source/SmartDocument/DocumentHeader.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentFooter.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
 	
-   <script type="text/javascript" src="../../ObjectTests/SmartDocument/DocumentHeaderTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/SmartDocument/DocumentFooterTest.js"></script>
    
    <script type="text/javascript">
       window.addEvent('domready', function() {
@@ -75,8 +75,8 @@
 </head>
 
 <body>
-	<h1>DocumentHeader.js test page</H1>
-	<p>This page contains tests for DocumentHeader.js JavaScript class.</P>
+	<h1>DocumentFooter.js test page</H1>
+	<p>This page contains tests for DocumentFooter.js JavaScript class.</P>
 	<div id="smartDocument"></div>
 </body>
 </html>
