Replace ScrollBar images. Clean up ScrollBar implementation.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ScrollBar/ScrollBarTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ScrollBar/ScrollBarTest.html
@@ -28,7 +28,7 @@
    
    <script type="text/javascript">
 	   window.addEvent('domready', function() {
-	      showScrollBar();
+	      //showScrollBar();
 	   });
 	
 	   JsHamcrest.Integration.JsUnit();
@@ -43,16 +43,16 @@
 
 <body>
    <h1>ScrollBar.js test page</h1>
-   <div id="scrollableContent" style="border:1px; height:100px; width:300px; paddig:5px">
-   <p>
-	   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-	   eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
-	   Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-	   Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, 
-	   sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, 
-	   quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? 
-      Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"   
-	</p>
+   <div id="scrollableContentContainer" style="border: 1px navy solid; display: block; overflow: hidden; position: absolute; left: 50px; top: 50px;">
+      <div id="scrollableContent" style="padding:5px; height:100px; width:300px;">
+		   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
+		   eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+		   Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+		   Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, 
+		   sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, 
+		   quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? 
+	      Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"   
+	  </div>
    </div>
 </body>
 </html>
