--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TestSuite.html
@@ -30,6 +30,7 @@
          newsuite.addTestPage("../ObjectTests/NewsReaderWidget/NewsReaderWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/PhotoGaleryWidget/PhotoGaleryWidgetTestSuite.html");
          newsuite.addTestPage("../ObjectTests/ResourceManager/ResourceManagerTest.html");
+         newsuite.addTestPage("../ObjectTests/ScrollBar/ScrollBarTest.html");
          newsuite.addTestPage("../ObjectTests/Singleton/SingletonTest.html");
          newsuite.addTestPage("../ObjectTests/SkinSelectorWidget/SkinSelectorWidgetTest.html");
          newsuite.addTestPage("../ObjectTests/SmartDocument/SmartDocumentTestSuite.html");
