Correct flaws in ScrollBar.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopColumnTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopColumnTest.html
@@ -93,7 +93,7 @@
 <body>
 	<h1>DesktopColumn.js test page</H1>
 	<p>This page contains tests for DesktopColumn.js JavaScript class.</P>
-	<div id="desktop">Desktop container.
+	<div id="desktop">
 	   <div id="pageWrapper"></div>
 	</div>
 </body>
