--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
@@ -119,6 +119,10 @@
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollBar/NoneExistingScrollableElementException.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollBar/ScrollBar.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollBar/ScrollArea.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollBar/SmoothScroll.js"></script>
    <script type="text/javascript" src="../../Source/SkinSelectorWidget/SkinChangedMessage.js"></script>
    <script type="text/javascript" src="../../Source/SkinSelectorWidget/SkinSelectorWidget.js"></script>
    <script type="text/javascript" src="../../Source/TabWidget/DuplicatedTabException.js"></script>
