--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopWindowTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopWindowTest.html
@@ -82,6 +82,10 @@
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollBar/NoneExistingScrollableElementException.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollBar/ScrollBar.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollBar/ScrollArea.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollBar/SmoothScroll.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditorFactory.js"></script>
