--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ScrollingBehaviour/ScrollingBehaviourTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ScrollingBehaviour/ScrollingBehaviourTest.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Test page for ScrollBar.js</title>
+<title>Test page for ScrollingBehaviour.js</title>
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
-   <link rel="stylesheet" type="text/css" href="../../../Desktops/ProcessPuzzle/Styles/ScrollBar.css">
+   <link rel="stylesheet" type="text/css" href="../../../Desktops/MochaUI/Styles/ScrollBar.css">
    
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
    <script type="text/javascript" src="../../Libraries/JsMockito/JsMockito.js"></script>
@@ -17,14 +17,17 @@
    <script type="text/javascript" src="../../JsUnit/app/JsTestClass.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
    
+   <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
-   <script type="text/javascript" src="../../Source/ScrollBar/NoneExistingScrollableElementException.js"></script>
-   <script type="text/javascript" src="../../Source/ScrollBar/ScrollBar.js"></script>
-   <script type="text/javascript" src="../../Source/ScrollBar/ScrollArea.js"></script>
-   <script type="text/javascript" src="../../Source/ScrollBar/SmoothScroll.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollingBehaviour/NoneExistingScrollableElementException.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollingBehaviour/ScrollArea.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollingBehaviour/ScrollControls.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollingBehaviour/ScrollingBehaviour.js"></script>
+   <script type="text/javascript" src="../../Source/ScrollingBehaviour/SmoothScroll.js"></script>
    
-   <script type="text/javascript" src="../../ObjectTests/ScrollBar/ScrollBarTest.js"></script>
-   <script type="text/javascript" src="../../ObjectTests/ScrollBar/ScrollAreaTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/ScrollingBehaviour/ScrollAreaTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/ScrollingBehaviour/ScrollControlsTest.js"></script>
+   <script type="text/javascript" src="../../ObjectTests/ScrollingBehaviour/ScrollingBehaviourTest.js"></script>
    
    <script type="text/javascript">
 	   window.addEvent('domready', function() {
@@ -35,16 +38,16 @@
 	   JsMockito.Integration.JsUnit();
 	   
 	   function showScrollBar(){
-	      var scrollBar = new ScrollBar( "scrollableContent" );
+	      var scrollBar = new ScrollingBehaviour( "scrollableContent" );
 	      scrollBar.construct();
 	   }
    </script>
 </head>
 
 <body>
-   <h1>ScrollBar.js test page</h1>
+   <h1>ScrollingBehaviour.js test page</h1>
    <div id="scrollableContentContainer" style="border: 1px navy solid; display: block; overflow: hidden; position: absolute; left: 50px; top: 50px;">
-      <div id="scrollableContent" style="padding:5px; height:100px; width:300px;">
+      <div id="scrollableContent" style="padding:5px; height: 200px; width: 300px;">
 		   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
 		   eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
 		   Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
