Hide RootTreeNode when specified.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
@@ -69,6 +69,7 @@
    <script type="text/javascript" src="../../Source/TreeWidget/CompositeTreeNodeType.js"></script>
    <script type="text/javascript" src="../../Source/TreeWidget/LeafTreeNode.js"></script>
    <script type="text/javascript" src="../../Source/TreeWidget/RootTreeNode.js"></script>
+   <script type="text/javascript" src="../../Source/TreeWidget/RootTreeNodeType.js"></script>
    <script type="text/javascript" src="../../Source/TreeWidget/TreeWidget.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUIController/WebUIController.js"></script> 
@@ -82,7 +83,7 @@
    <script type="text/javascript" src="../../ObjectTests/TreeWidget/TreeWidgetTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/TreeWidget/TreeNodeTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/TreeWidget/CompositeTreeNodeTest.js"></script>
-   
+
    <script type="text/javascript">
       window.addEvent('domready', function() {
       });
