--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -171,6 +171,7 @@
    <script type="text/javascript" src="JavaScript/Source/TreeWidget/CompositeTreeNodeType.js"></script>
    <script type="text/javascript" src="JavaScript/Source/TreeWidget/LeafTreeNode.js"></script>
    <script type="text/javascript" src="JavaScript/Source/TreeWidget/RootTreeNode.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/TreeWidget/RootTreeNodeType.js"></script>
    <script type="text/javascript" src="JavaScript/Source/TreeWidget/TreeWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIController/UnconfiguredWebUIControllerException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIController/WebUIController.js"></script>
