--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
@@ -55,6 +55,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
+   <script type="text/javascript" src="../../Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/LocaleUtil.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/ResourceKey.js"></script>
