--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DataElementTest.html
@@ -45,6 +45,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/LinkedHashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/OptionsResource.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
@@ -63,6 +64,8 @@
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentPlugin.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DataElementBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DataElement.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/CompositeDocumentElement.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/CompositeDataElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DataElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
