Implement TableElement as possible component of SmartDocument.

--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -86,6 +86,12 @@
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/FormElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/FormField.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/SmartDocument.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableBody.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableCell.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableColumnHeader.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableHeader.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableRow.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/ComplexContentBehaviour.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/ConfigurationTimeoutException.js"></script>
