TableElement wraps the table with a div. Style of this div depends whether it is editable or not.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/SmartDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/SmartDocumentTest.html
@@ -96,6 +96,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/TableCell.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/TableColumnHeader.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/TableElement.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/TableElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/TableHeader.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/TableRow.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
