--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -90,6 +90,7 @@
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableCell.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableColumnHeader.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableElementEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableHeader.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/TableRow.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
