--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/XMLBundleParserTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/XMLBundleParserTest.html
@@ -51,7 +51,7 @@
 		
 		function testParse(){
 			var cache = new ResourceCache();
-			var locale = new Locale({ language : "en" });
+			var locale = new ProcessPuzzleLocale({ language : "en" });
 			var fileName = "TestResources_en.xml";
 			var parser = new XMLBundleParser();
 
