--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TabWidget/TabTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TabWidget/TabTest.html
@@ -79,7 +79,7 @@
       var WIDGET_DEFINITION_URI = "TabsDefinition.xml";
       var aTab;
       var componentStateManager;
-      var locale = new Locale({ language : LANGUAGE });
+      var locale = new ProcessPuzzleLocale({ language : LANGUAGE });
       var messageBus;
       var onTabSelectedWasCalled;
       var parentElement;
