--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ToolBarWidget/ToolBarWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ToolBarWidget/ToolBarWidgetTest.html
@@ -93,7 +93,7 @@
       var WEBUI_CONFIGURATION_URI = "../ToolBarWidget/WebUIConfiguration.xml";
 
       var componentStateManager;
-      var locale = new Locale({ language : LANGUAGE });
+      var locale = new ProcessPuzzleLocale({ language : LANGUAGE });
       var receivedMessage;
       var toolBar;
       var toolBarContainerEelement;
