--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/WebUIConfiguration/WebUIConfigurationTest.html
@@ -320,7 +320,7 @@
  	  }
  	  
  	  function testIsSupportedLocale( locale ){
- 	     var enLocale = new Locale({ language : "en", country : "GB" });
+ 	     var enLocale = new ProcessPuzzleLocale({ language : "en", country : "GB" });
  	     assertThat( webUIConfiguration.isSupportedLocale( enLocale ), is( true ));
  	  }
       
