--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ToolBarWidget/ToolBarButtonTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/ToolBarWidget/ToolBarButtonTest.html
@@ -88,7 +88,7 @@
       var WEBUI_CONFIGURATION_URI = "../ToolBarWidget/WebUIConfiguration.xml";
 
       var componentStateManager;
-      var locale = new Locale({ language : LANGUAGE });
+      var locale = new ProcessPuzzleLocale({ language : LANGUAGE });
       var toolBar;
       var toolBarButton;
       var toolBarContainerEelement;
