Correct flaw in TimeOutBehaviour class and modify effected classes accordingly.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/FundamentalTypesTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/FundamentalTypes/FundamentalTypesTestSuite.html
@@ -25,6 +25,7 @@
          newsuite.addTestPage("../ObjectTests/FundamentalTypes/RemoteResourceTest.html");
          newsuite.addTestPage("../ObjectTests/FundamentalTypes/ResourceUriTest.html");
          newsuite.addTestPage("../ObjectTests/FundamentalTypes/StringTokenizerTest.html");
+         newsuite.addTestPage("../ObjectTests/FundamentalTypes/TimeOutBehaviourTest.html");
          newsuite.addTestPage("../ObjectTests/FundamentalTypes/XmlResourceTest.html");
          return newsuite;
       }
