--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
@@ -120,6 +120,7 @@
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
+   <script type="text/javascript" src="../../Source/ResourceManager/UndefinedDocumentResourceException.js"></script>
    <script type="text/javascript" src="../../Source/ScrollingBehaviour/NoneExistingScrollableElementException.js"></script>
    <script type="text/javascript" src="../../Source/ScrollingBehaviour/ScrollArea.js"></script>
    <script type="text/javascript" src="../../Source/ScrollingBehaviour/ScrollControls.js"></script>
