Refactor SmartDocument to use schema validates document definition.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/SmartDocumentTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/SmartDocumentTestSuite.html
@@ -28,6 +28,8 @@
         newsuite.addTestPage("../ObjectTests/SmartDocument/FormElementTest.html");
         newsuite.addTestPage("../ObjectTests/SmartDocument/FormFieldTest.html");
 		  newsuite.addTestPage("../ObjectTests/SmartDocument/SmartDocumentTest.html");
+        newsuite.addTestPage("../ObjectTests/SmartDocument/TableBodyTest.html");
+        newsuite.addTestPage("../ObjectTests/SmartDocument/TableCellTest.html");
         newsuite.addTestPage("../ObjectTests/SmartDocument/TableElementTest.html");
 		  return newsuite;
 		}
