--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/TableElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/TableElementTest.html
@@ -18,10 +18,6 @@
       var contextRootPrefix = "../../../";
    </script>
    
-   <!--[if IE]>
-      <script type="text/javascript" src="../../Libraries/MochaUI/excanvas.js"></script>
-   <![endif]-->  
-   
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
    <script type="text/javascript" src="../../JsUnit/JsMockito/JsMockito.js"></script>
    <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
@@ -56,10 +52,11 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/LocaleUtil.js"></script>
+   <script type="text/javascript" src="../../Source/Internationalization/LocalizationResourceManager.js"></script>
+   <script type="text/javascript" src="../../Source/Internationalization/LocalizationResourceParser.js"></script>
+   <script type="text/javascript" src="../../Source/Internationalization/LocalizationResourceReference.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/ResourceKey.js"></script>
    <script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
-   <script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
-   <script type="text/javascript" src="../../Source/Internationalization/XMLResourceBundle.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditorFactory.js"></script>
@@ -82,8 +79,6 @@
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
 
-   <script type="text/javascript" src="../../ObjectTests/SmartDocument/TableBodyTest.js"></script>
-   <script type="text/javascript" src="../../ObjectTests/SmartDocument/TableCellTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/SmartDocument/TableColumnHeaderTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/SmartDocument/TableElementTest.js"></script>
    <script type="text/javascript" src="../../ObjectTests/SmartDocument/TableHeaderTest.js"></script>
@@ -101,8 +96,8 @@
 </head>
 
 <body>
-	<h1>FormElement.js test page</H1>
-	<p>This page contains tests for FormElement.js JavaScript class.</P>
+	<h1>TableElement.js test page</H1>
+	<p>This page contains tests for TableElement.js JavaScript class.</P>
 	<div id="SmartDocument"></div>
 </body>
 </html>
