--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/LocalizationResourceManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/LocalizationResourceManagerTest.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Test page for XMLBundleParserTest.js</title>
+	<title>Test page for LocalizationResourceManager.js</title>
 	<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
@@ -18,6 +18,7 @@
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/jsUnitCore.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestCase.js"></script>
+   <script type="text/javascript" src="../../JsUnit/app/JsTestClass.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
 	<script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
@@ -27,49 +28,36 @@
 	<script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
 	<script type="text/javascript" src="../../Libraries/XMLforScript/preMadeSaxEventHandler.js"></script>
     
+   <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
+   
 	<script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
 	<script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
 	<script type="text/javascript" src="../../Source/Internationalization/LocaleUtil.js"></script>
+   <script type="text/javascript" src="../../Source/Internationalization/LocalizationResourceManager.js"></script>
+   <script type="text/javascript" src="../../Source/Internationalization/LocalizationResourceParser.js"></script>
+   <script type="text/javascript" src="../../Source/Internationalization/LocalizationResourceReference.js"></script>
 	<script type="text/javascript" src="../../Source/Internationalization/ResourceKey.js"></script>
 	<script type="text/javascript" src="../../Source/Internationalization/ResourceCache.js"></script>
-	<script type="text/javascript" src="../../Source/Internationalization/XMLBundleParser.js"></script>
+   <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
+   <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
 	
-    <script type="text/javascript" >
+   <script type="text/javascript" src="../../ObjectTests/Internationalization/LocalizationResourceManagerTest.js"></script>
+   
+   <script type="text/javascript" >
 		window.addEvent('domready', function() {
-			runTestFunction();
 		});
   	
 		JsHamcrest.Integration.JsUnit();
 		
-		function setUp(){}
-
-		function tearDown(){}
-		
-		function testParse(){
-			var cache = new ResourceCache();
-			var locale = new ProcessPuzzleLocale({ language : "en" });
-			var fileName = "TestResources_en.xml";
-			var parser = new XMLBundleParser();
-
-			parser.parse( cache, fileName, locale );
-			var foundValue = cache.get("res_2","String");
-			assertThat( cache.get("res_2","String"), equalTo( "Resource 2" ));
-		}
-
-		//runs a test function during debugging
-		function runTestFunction(){
-			setUp();
-		    testParse();
-			tearDown();
-		}
     </script>
 </head>
 
 <body>
-	<h1>XMLBundleParser.js test page</H1>
-	<p>This page contains tests for XMLBundleParser.js JavaScript class.</P>
+	<h1>LocalizationResourceManager.js test page</H1>
+	<p>This page contains tests for LocalizationResourceManager.js JavaScript class.</P>
 </body></html>
