Add TimeOutBehaviour to BrowserWidget.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/BrowserWidget/BrowserWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/BrowserWidget/BrowserWidgetTest.html
@@ -35,6 +35,7 @@
     
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script> 
+   <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
 	
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
@@ -51,6 +52,7 @@
    <script type="text/javascript" src="../../Source/FundamentalTypes/LinkedHashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
